[package]
name = "claw-vault"
version = "0.1.0"
edition = "2021"
authors = ["Shashank Verma <shashank.verma2002@gmail.com>"]
license = "MIT"
description = "A platform to share sensitive information with desired recipients."
repository = "https://github.com/Claw-Vault/claw-vault"
readme = "README.md"
keywords = ["rsa", "xrc", "encryption", "decryption", "vault", "claw", "share"]
rust-version = "1.80"

[dependencies]
