[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = { workspace = true }
tokio = { workspace = true }

# http
axum = { workspace = true }
tracing = { workspace = true }

# dto
serde = { workspace = true }
validator = { workspace = true }

# utils
backtrace = "=0.3.73"
nanoid = "=0.4.0"

# swagger
utoipa = { workspace = true }

# cryptography
uuid = { version = "=1.14.0", features = ["v4"] }
openssl = { version = "=0.10", features = ["vendored"] }
rand = "=0.9.0"
base64 = "=0.22.1"
hex = "=0.4.3"
xor_cryptor = "=2.0.4"

chrono = { workspace = true }
