[package]
name = "lib-core"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }

# http
axum = { workspace = true }
tracing = { workspace = true }

# dto
serde = { workspace = true }
validator = { workspace = true }

# utils
backtrace = "=0.3.73"
nanoid = { workspace = true }

# swagger
utoipa = { workspace = true }

# cryptography
uuid = { version = "=1.16.0", features = ["v4"] }
openssl = { version = "=0.10", features = ["vendored"] }
rand = "=0.9.0"
base64 = "=0.22.1"
hex = "=0.4.3"
xor_cryptor = "=2.0.4"

sqlx = { workspace = true }
chrono = { workspace = true }
