[package]
name = "lib-domain"
version = "2.0.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
tokio = { workspace = true }
tracing = { workspace = true }

surrealdb = { workspace = true }
chrono = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

utoipa = { workspace = true }
